--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "embarkjs-swarm": "^6.0.0",
     "embarkjs-web3": "^6.0.0",
     "embarkjs-whisper": "^6.0.0"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1"
   }
 }
